--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: 'node_modules'
+          cache: 'npm'
       - run: npm run install && npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
