--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
-      - run: npm run install && npm run build
+      - run: npm install && npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
